# multilingual-transformer-sentiment-emotion

./: 01_Dataset_Exploration.ipynb.ipynb  README.md  pyproject.toml
notebooks/: 01_Dataset_Exploration.ipynb  02_Data_Preprocessing.ipynb
